--- a/web/src/main/resources/templates/head/headCart.html
+++ b/web/src/main/resources/templates/head/headCart.html
@@ -1,6 +1,6 @@
 <div th:fragment="head" class="header" >
 	<div class="head-box clearfix">
-		<script type="text/javascript" th:src="@{/js/script.js}"></script>
+		<script type="text/javascript" th:src="@{/js/noCart.js}"></script>
 		<a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/></a>
 		<div class="head-search">
 			<form id="searchForm" action="/products/_search">
