--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -22,7 +22,7 @@
 	</script>
 </head>
 <body>
-	<div class="header" th:include="head/head">Head</div>
+	<div class="header" th:include="head/headCart">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="self-wrap">
