--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="form-group lhg">
-                <input type="submit" class="btn btn-primary col-xs-offset-3" value="保存"></input>
+                <input type="submit" ng-disabled="disabled" class="btn btn-primary col-xs-offset-3" value="保存"></input>
             </div>
         </div>
     </form>
