--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="item in items" ng-click="view(item)">
+            <tr ng-repeat="item in items" >
                 <td>{{$index+1}}</td>
                 <td>{{item.categoryName}}</td>
                 <td>{{item.title}}</td>
@@ -31,6 +31,7 @@
                 <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
                 <td>
                 	<a class="btn btn-primary btn-sm" ng-click="updateState(item)">{{item.state|reverseActiveFilter}}</a>
+                	<a class="btn btn-primary btn-sm" ng-click="view(item)">修改</a>
                 </td>
             </tr>
         </tbody>
