--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -1,116 +1,55 @@
 <div class="contentpanel">
-    <form class="form-horizontal">
-        <div class="row">
-            <div class="form-group">
-                <label class="control-label col-sm-1">标题</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control col-sm-5" ng-model="item.title" />
-                </div>
-            </div>
-            <div class="form-group">
+	<form class="form-horizontal files_tab">
+		<div class="row">
+			<div class="form-group">
+				<label class="control-label col-sm-1">标题</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control col-sm-5" ng-model="item.title" />
+				</div>
+			</div>
+            <div class="form-group lhg">
                 <label class="control-label col-sm-1">图片</label>
+                <div class="col-sm-2">
+                    <img ng-src="{{item.cover}}" width="100" height="100" />
+                </div>
                 <div class="col-sm-6">
-                    <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
-
+                    <button id="uploadImg" class="btn btn-success btn-xs">
+                        <input type="file" file-upload="upload" />
+                        <a href="#">选择文件</a>
+                    </button>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-1">解决方案1</label>
-                <!-- <ul>
-                    <li ng-repeat="s in item.solutions track by $index">
-                        {{s.name}}
-                        <a ng-click="deleteSolution($index)">delete</a>
-                    </li>
-                </ul> -->
-                <div class="col-sm-6">
-                	<table class="table table-bordered">
-					     <thead>
-					         <tr>
-					             <th>名称</th>
-					             <th>操作</th>
-					         </tr>
-					     </thead>
-					     <tbody>
-					         <tr ng-repeat="s in item.solutions track by $index">
-					             <td> {{s.name}}</td>
-					             <td>
-					             		<a ng-click="deleteSolution($index)" class="btn btn-primary btn-sm">删除</a>
-					             </td>
-					         </tr>
-					         <tr>
-					         		<td>解决方案1</td>
-					         		<td>删除</td>
-					         </tr>
-					     </tbody>
-					 </table>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-1">解决方案2</label>
-                <!-- <ul>
-                    <li ng-repeat="s in item.solutions track by $index">
-                        {{s.name}}
-                        <a ng-click="deleteSolution($index)">delete</a>
-                    </li>
-                </ul> -->
-                <div class="col-sm-6">
-                	<table class="table table-bordered">
-					     <thead>
-					         <tr>
-					             <th>名称</th>
-					             <th>操作</th>
-					         </tr>
-					     </thead>
-					     <tbody>
-					         <tr ng-repeat="s in item.solutions track by $index">
-					             <td> {{s.name}}</td>
-					             <td>
-					             		<a ng-click="deleteSolution($index)" class="btn btn-primary btn-sm">删除</a>
-					             </td>
-					         </tr>
-					         <tr>
-					         		<td>解决方案1</td>
-					         		<td>删除</td>
-					         </tr>
-					     </tbody>
-					 </table>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-1">解决方案1</label>
-                <!-- <ul>
-                    <li ng-repeat="s in item.solutions track by $index">
-                        {{s.name}}
-                        <a ng-click="deleteSolution($index)">delete</a>
-                    </li>
-                </ul> -->
-                <div class="col-sm-6">
-                	<table class="table table-bordered">
-					     <thead>
-					         <tr>
-					             <th>名称</th>
-					             <th>操作</th>
-					         </tr>
-					     </thead>
-					     <tbody>
-					         <tr ng-repeat="s in item.solutions track by $index">
-					             <td> {{s.name}}</td>
-					             <td>
-					             		<a ng-click="deleteSolution($index)" class="btn btn-primary btn-sm">删除</a>
-					             </td>
-					         </tr>
-					         <tr>
-					         		<td>解决方案1</td>
-					         		<td>删除</td>
-					         </tr>
-					     </tbody>
-					 </table>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-offset-3 mt20">
-            <input type="submit" class="btn btn-primary" value="提交" ng-click="submit()" />
-            <button ng-click="addSolution()" class="btn btn-primary">添加</button>
-        </div>
-    </form>
+			<div class="form-group">
+				<label class="control-label col-sm-1">图片</label>
+				<div class="col-sm-6">
+					<textarea ckeditor="editorOptions" ng-model="item.content"></textarea>										
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-1">解决方案1</label>
+				<div class="col-sm-6">
+					<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th>名称</th>
+								<th>操作</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="s in item.solutions track by $index">
+								<td> {{s.name}}</td>
+								<td><a ng-click="deleteSolution($index)" class="btn btn-primary btn-sm">删除</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-offset-3 mt20">
+			<input type="submit" class="btn btn-primary" value="提交" ng-click="submit()" />
+			<button ng-click="addSolution()" class="btn btn-primary">
+				添加
+			</button>
+		</div>
+	</form>
 </div>
