admin info&subject add summary

--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -8,6 +8,12 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<label class="control-label col-sm-1">摘要</label>
+				<div class="col-sm-11">
+					<input type="text" class="form-control" ng-model="item.summary" />
+				</div>
+			</div>
+			<div class="form-group">
 				<label class="control-label col-sm-1">内容</label>
 				<div class="col-sm-6">
                     <textarea ckeditor="editorOptions" ng-model="item.content"></textarea>
