--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -12,6 +12,13 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="control-label col-sm-1">摘要</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" name="summary" ng-model="item.summary"  />
+                    <span ng-show="infoForm.title.$error.required" class="error">请输入摘要</span>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="control-label col-sm-1">分类</label>
                 <div class="col-sm-3">
                     <select ng-model="item.category" name="category" ng-options="c.id as c.name for c in categories" class="form-control" ng-required="true">
