--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -7,6 +7,12 @@
 					<input type="text" class="form-control col-sm-5" ng-model="item.title" />
 				</div>
 			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-1">摘要</label>
+				<div class="col-sm-11">
+                    <input type="text" class="form-control" name="summary" ng-model="item.summary"  />
+				</div>
+			</div>
             <div class="form-group lhg">
                 <label class="control-label col-sm-1">图片</label>
                 <div class="col-sm-2">
