subject solution add feature

--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -41,6 +41,7 @@
 		</div>
 		<div class="col-xs-offset-3 panel-footer">
 			<input type="submit" id="submit" class="btn btn-primary" value="提交" />
+			<a href="#/subject/{{item.id}}/solutions">修改解决方案</a>
 		</div>
 	</form>
 </div>
