--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -15,7 +15,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="item in items" ng-click="view(item)">
-                <td>{{$index+1}}</td>
+                <td><a href="#/subjectDetail/{{item.id}}">{{$index+1}}</a></td>
                 <td>{{item.name}}</td>
                 <td>{{item.img}}</td>
             </tr>
