--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -17,7 +17,7 @@
             <tr ng-repeat="item in items" ng-click="view(item)">
                 <td><a href="#/subjectDetail/{{item.id}}">{{$index+1}}</a></td>
                 <td>{{item.name}}</td>
-                <td>{{item.img}}</td>
+                <td><img ng-src="{{item.cover}}"></img></td>
             </tr>
         </tbody>
     </table>
