--- a/admin/src/main/resources/templates/brand/brand.html
+++ b/admin/src/main/resources/templates/brand/brand.html
@@ -16,7 +16,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="item in items" >
-                <td ng-click="view(item)">{{$index+1}}</td>
+                <td >{{$index+1}}</td>
                 <td>{{item.title}}</td>
                 <td>
                     <img ng-src="{{item.cover}}" width="120" height="120" />
@@ -25,6 +25,9 @@
                 <td>
                     <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
                         {{item.state|reverseActiveFilter}}
+                    </button>
+                    <button type="button" class="btn btn-primary btn-sm" ng-click="view(item)">
+                    	修改
                     </button>
                 </td>
             </tr>
