--- a/admin/src/main/resources/templates/scroll/list.html
+++ b/admin/src/main/resources/templates/scroll/list.html
@@ -15,7 +15,7 @@
                 	<img ng-src="{{item.imageUrl}}" width="120" height="120" />
                 </td>
                 <td>{{item.href}}</td>
-                <td>{{item.updatedTime}}</td>
+                <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
             </tr>
         </tbody>
     </table>
