--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -55,6 +55,7 @@
 								</a>
 							</li>
 						</ul>
+						<a class="more blue">more>></a>
 					</div>
 					<div class="tab-panel news-list hide">
 						<ul>
@@ -65,6 +66,7 @@
 								</a>
 							</li>
 						</ul>
+						<a class="more blue">more>></a>
 					</div>
 					<div class="tab-panel news-list hide">
 						<ul>
@@ -75,6 +77,7 @@
 								</a>
 							</li>
 						</ul>
+						<a class="more blue">more>></a>
 					</div>
 				</div>
 			</div>
