--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -51,9 +51,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="head-user">
+			<div class="head-user hide-menu">
 				<div class="user-name" id="username"  th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></div>
-				<div class="user-menu bodr">
+				<div class="user-menu show-menu bodr">
 					<ul>
 						<li th:unless="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
 							<a href="/supplier/detail">个人中心</a>
@@ -120,17 +120,17 @@
 				<li th:unless="${pc.name=='专题'}">
 					<a href="/subjects">专题</a>
 				</li>
-				<li class="news-down active nobor" th:if="${pc.name=='资讯'}">
+				<li class="news-down hide-menu active nobor" th:if="${pc.name=='资讯'}">
 					<a >资讯</a>
-					<div class="news-sort hide">
+					<div class="news-sort show-menu">
 						<a href="/informationCategorys/行业要闻">行业要闻</a>
 						<a href="/informationCategorys/新品成果">新品成果</a>
 						<a href="/informationCategorys/厂商动态">厂商动态</a>
 					</div>
 				</li>
-				<li class="news-down" th:unless="${pc.name=='资讯'}">
+				<li class="news-down hide-menu" th:unless="${pc.name=='资讯'}">
 					<a >资讯</a>
-					<div class="news-sort hide">
+					<div class="news-sort show-menu">
 						<a href="/informationCategorys/行业要闻">行业要闻</a>
 						<a href="/informationCategorys/新品成果">新品成果</a>
 						<a href="/informationCategorys/厂商动态">厂商动态</a>
@@ -153,9 +153,9 @@
 				<li>
 					<a href="/subjects">专题</a>
 				</li>
-				<li class="news-down">
+				<li class="news-down hide-menu">
 					<a >资讯</a>
-					<div class="news-sort hide">
+					<div class="news-sort show-menu">
 						<a href="/informationCategorys/行业要闻">行业要闻</a>
 						<a href="/informationCategorys/新品成果">新品成果</a>
 						<a href="/informationCategorys/厂商动态">厂商动态</a>
