--- a/admin/src/main/resources/templates/category/category.html
+++ b/admin/src/main/resources/templates/category/category.html
@@ -40,7 +40,7 @@
                     <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
                             修改
                         </button>
                     </td>
@@ -61,7 +61,7 @@
                     <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
                             修改
                         </button>
                     </td>
@@ -82,7 +82,7 @@
                     <td><a href="#/{{item.id}}/categories">{{$index+1}}</a></td>
                     <td>{{item.name}}</td>
                     <td>
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                        <button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
                             修改
                         </button>
                     </td>
