--- a/admin/src/main/resources/templates/category/categoryAdd.html
+++ b/admin/src/main/resources/templates/category/categoryAdd.html
@@ -5,7 +5,7 @@
 	            <div class="form-group">
 	                <label class="col-sm-3 control-label">商品分类分类</label>
 	                <div class="col-sm-5">
-	                    <select name="category" ng-model="item.category">
+	                    <select name="category" ng-model="item.parent">
 	                        <option value="">--请选择--</option>
 	                        <option value="1">仪器</option>
 	                        <option value="2">试剂</option>
