--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -21,23 +21,6 @@
         var token = $("meta[name='_csrf']").attr("content");
         var header = $("meta[name='_csrf_header']").attr("content");
 
-              $('input[type="file"]').fileupload({
-                  dataType : 'json',
-                  add : function(e, data) {
-                	  if(1048576 > data.files[0].size ){
-                     	 data.submit();
-                	  }
-                	  else{
-                		  alert("文件过大,请上传1M以下的图片");
-                	  }
-                  },
-                  done : function(e, data) {
-                	  $("#"+ajaxUrl).val(data.result.files[0].url);
-                	  $(this).parent().parent().find("img").attr("src",data.result.files[0].url);
-                  },
-                  progressall : function(e, data) {
-                  }
-              });
         $(document).ajaxSend(function(e, xhr, options) {
             xhr.setRequestHeader(header, token);
         });
@@ -108,10 +91,12 @@
                 data.submit();
             },
             done: function(e, data) {
-                $("#" + ajaxUrl).val(data.result.files[0].url);
-                $(this).parent().parent().find("img").attr("src", data.result.files[0].url);
+               	$("#" + ajaxUrl).val(data.result);
+                $(this).parent().parent().find("img").attr("src", data.result);
             },
-            progressall: function(e, data) {}
+            progressall: function(e, data) {
+            }
+            
         });
 
     });
@@ -277,7 +262,7 @@
                 <label><i>*</i>组织结构代码证上传</label>
                 <img th:src="*{structureCodeUrl}" width="100" height="100" />
                 <span id="uploadImg" type="button">
-                    <input type='file' name='file' th:attr="data-url=@{products/1?batch}"/>
+                    <input type='file' name='file' th:attr="data-url=@{structureCodeUrl}"/>
                     <a href="#">选择文件</a>
                 </span>
                 <input type="hidden" th:field="*{structureCodeUrl}" />
