--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
 			<div class="form-group">
-				<label class="control-label col-sm-1">图片</label>
+				<label class="control-label col-sm-1">内容</label>
 				<div class="col-sm-6">
 					<textarea ckeditor="editorOptions" ng-model="item.content"></textarea>										
 				</div>
@@ -56,6 +56,7 @@
 			<button ng-click="addSolution()" class="btn btn-primary">
 				添加
 			</button>
+   			<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
 		</div>
 	</form>
 </div>
