--- a/admin/src/main/resources/templates/subject/edit.html
+++ b/admin/src/main/resources/templates/subject/edit.html
@@ -13,6 +13,18 @@
 					<input type="text" class="form-control" ng-model="item.summary" />
 				</div>
 			</div>
+			<div class="form-group lhg">
+                <label class="control-label col-sm-1">图片</label>
+                <div class="col-sm-2">
+                    <img ng-src="{{item.cover}}" width="100" height="100" />
+                </div>
+                <div class="col-sm-6">
+                    <button id="uploadImg" class="btn btn-success btn-xs">
+                        <input type="file" file-upload="upload" />
+                        <a href="#">选择文件</a>
+                    </button>
+                </div>
+            </div>
 			<div class="form-group">
 				<label class="control-label col-sm-1">内容</label>
 				<div class="col-sm-6">
@@ -41,7 +53,8 @@
 		</div>
 		<div class="col-xs-offset-3 panel-footer">
 			<input type="submit" id="submit" class="btn btn-primary" value="提交" />
-			<a href="#/subject/{{item.id}}/solutions">修改解决方案</a>
+			<a class="btn btn-primary" href="#/subject/{{item.id}}/solutions">修改解决方案</a>
+ 	  		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
 		</div>
 	</form>
 </div>
