--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -91,28 +91,28 @@
 		<div class="nav-box">
 			<ul th:if="${pc!=null}">
 				<li th:if="${pc.name=='仪器'}" class="active nobor">
-					<a href="/productCategory/仪器">仪器</a>
+					<a href="/productCategory/1">仪器</a>
 				</li>
 				<li th:unless="${pc.name=='仪器'}">
-					<a href="/productCategory/仪器">仪器</a>
+					<a href="/productCategory/1">仪器</a>
 				</li>
 				<li th:if="${pc.name=='试剂'}" class="active nobor">
-					<a href="/productCategory/试剂">试剂</a>
+					<a href="/productCategory/2">试剂</a>
 				</li>
 				<li th:unless="${pc.name=='试剂'}">
-					<a href="/productCategory/试剂">试剂</a>
+					<a href="/productCategory/2">试剂</a>
 				</li>
 				<li th:if="${pc.name=='耗材'}" class="active nobor">
-					<a href="/productCategory/耗材">耗材</a>
+					<a href="/productCategory/3">耗材</a>
 				</li>
 				<li th:unless="${pc.name=='耗材'}">
-					<a href="/productCategory/耗材">耗材</a>
+					<a href="/productCategory/3">耗材</a>
 				</li>
 				<li th:if="${pc.name=='服务'}" class="active nobor">
-					<a href="/productCategory/服务">服务</a>
+					<a href="/productCategory/4">服务</a>
 				</li>
 				<li th:unless="${pc.name=='服务'}">
-					<a href="/productCategory/服务">服务</a>
+					<a href="/productCategory/4">服务</a>
 				</li>
 				<li th:if="${pc.name=='专题'}" class="active nobor">
 					<a href="/subjects">专题</a>
