--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -107,17 +107,18 @@
     <div class="resg-header">
         <div class="head-nav">
             <div class="nav-box">
-                <a href="/productCategory/仪器">仪器</a>
-                <i>|</i>
-                <a href="/productCategory/试剂">试剂</a>
-                <i>|</i>
-                <a href="/productCategory/耗材">耗材</a>
-                <i>|</i>
-                <a href="/productCategory/服务">服务</a>
-                <i>|</i>
-                <a href="/subjects">专题</a>
-                <a href="/" class="fr">返回首页</a>
-            </div>
+				<a href="/">首页</a>
+				<i>|</i>
+				<a href="/productCategory/1">仪器</a>
+				<i>|</i>
+				<a href="/productCategory/2">试剂</a>
+				<i>|</i>
+				<a href="/productCategory/3">耗材</a>
+				<i>|</i>
+				<a href="/productCategory/4">服务</a>
+				<i>|</i>
+				<a href="/subjects">专题</a>
+			</div>
         </div>
         <div class="head-box clearfix">
             <a href="/" class="logo"><img th:src="@{/img/logo.png}" alt="logo" width="165" height="30" /></a>
