--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -76,7 +76,7 @@
 					<span>浏览<i th:text="${subject.viewCount}">1212</i>次</span>	
 					<span> 来源 : <i th:text="${subject.createdBy}">上海申捷卫生科1技</i></span>
 				</div>
-				<div class="dtl-txt" escapeXml="false" th:text="${subject.content.content}">
+				<div class="dtl-txt" escapeXml="false" th:utext="${subject.content.content}">
 				</div>			
 				<div class="gray-hd ft14">设备方案</div>
 				<div class="plans" th:if="${subject.getSolutions().size()!=0}" th:each="solution:${subject.getSolutions()}">
