--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -91,8 +91,8 @@
                 data.submit();
             },
             done: function(e, data) {
-               	$("#" + ajaxUrl).val(data.result);
-                $(this).parent().parent().find("img").attr("src", data.result);
+               	$("#" + ajaxUrl).val(data.result[0]);
+                $(this).parent().parent().find("img").attr("src", data.result[0]);
             },
             progressall: function(e, data) {
             }
