添加utext显示富文本，修改data.sql品牌图片路径

--- a/web/src/main/resources/templates/information/informations.html
+++ b/web/src/main/resources/templates/information/informations.html
@@ -16,22 +16,20 @@
 	<!-- header -->
 	<div class="wrapper">
 		<div class="crumb news-crumb">
-			<a>首页</a>
+			<a href="/">首页</a>
 			<i>></i>
-			<a>资讯</a>
-			<i>></i>
-			<a th:if="${category.url == 'HYYW'}">行业要闻</a>
-			<a th:if="${category.url == 'XPCG'}">新品成果</a>
-			<a th:if="${category.url == 'CSDT'}">厂商动态</a>
+			<a th:if="${pc.url == 'HYYW'}">行业要闻</a>
+			<a th:if="${pc.url == 'XPCG'}">新品成果</a>
+			<a th:if="${pc.url == 'CSDT'}">厂商动态</a>
 		</div>	
 		<div class="mainwrapper clearfix">
 			<div class="aside fl">
-				<a th:if="${category.url =='HYYW'}" class="active">行业要闻</a>
-				<a th:unless="${category.url =='HYYW'}" href="/informationCategorys/行业要闻">行业要闻</a>
-				<a th:if="${category.url =='XPCG'}" class="active">新品成果</a>
-				<a th:unless="${category.url =='XPCG'}" href="/informationCategorys/新品成果">新品成果</a>
-				<a th:if="${category.url =='CSDT'}" class="active">厂商动态</a>
-				<a th:unless="${category.url =='CSDT'}" href="/informationCategorys/厂商动态">厂商动态</a>
+				<a th:if="${pc.url =='HYYW'}" class="active">行业要闻</a>
+				<a th:unless="${pc.url =='HYYW'}" href="/informationCategorys/7">行业要闻</a>
+				<a th:if="${pc.url =='XPCG'}" class="active">新品成果</a>
+				<a th:unless="${pc.url =='XPCG'}" href="/informationCategorys/8">新品成果</a>
+				<a th:if="${pc.url =='CSDT'}" class="active">厂商动态</a>
+				<a th:unless="${pc.url =='CSDT'}" href="/informationCategorys/9">厂商动态</a>
 			</div>
 			<div class="mainpanel fr">
 				<div class="news-wrap">
