--- a/web/src/main/resources/templates/head/headCart.html
+++ b/web/src/main/resources/templates/head/headCart.html
@@ -120,20 +120,20 @@
 				<li th:unless="${pc.name=='专题'}">
 					<a href="/subjects">专题</a>
 				</li>
-				<li class="news-down active nobor" th:if="${pc.name=='资讯'}">
+				<li class="news-down hide-menu active nobor" th:if="${pc.id == 7 or pc.id==8 or pc.id ==9}">
 					<a >资讯</a>
-					<div class="news-sort hide">
-						<a href="/informationCategorys/行业要闻">行业要闻</a>
-						<a href="/informationCategorys/新品成果">新品成果</a>
-						<a href="/informationCategorys/厂商动态">厂商动态</a>
+					<div class="news-sort show-menu">
+						<a href="/informationCategorys/7">行业要闻</a>
+						<a href="/informationCategorys/8">新品成果</a>
+						<a href="/informationCategorys/9">厂商动态</a>
 					</div>
 				</li>
-				<li class="news-down" th:unless="${pc.name=='资讯'}">
+				<li class="news-down hide-menu" th:unless="${pc.id == 7 or pc.id==8 or pc.id ==9}">
 					<a >资讯</a>
-					<div class="news-sort hide">
-						<a href="/informationCategorys/行业要闻">行业要闻</a>
-						<a href="/informationCategorys/新品成果">新品成果</a>
-						<a href="/informationCategorys/厂商动态">厂商动态</a>
+					<div class="news-sort show-menu">
+						<a href="/informationCategorys/7">行业要闻</a>
+						<a href="/informationCategorys/8">新品成果</a>
+						<a href="/informationCategorys/9">厂商动态</a>
 					</div>
 				</li>
 			</ul>
