在commonuser表中添加职务字段，增加搜索界面品牌折叠功能

--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -156,9 +156,9 @@
 				<li class="news-down hide-menu">
 					<a >资讯</a>
 					<div class="news-sort show-menu">
-						<a href="/informationCategorys/行业要闻">行业要闻</a>
-						<a href="/informationCategorys/新品成果">新品成果</a>
-						<a href="/informationCategorys/厂商动态">厂商动态</a>
+						<a href="/informationCategorys/7">行业要闻</a>
+						<a href="/informationCategorys/8">新品成果</a>
+						<a href="/informationCategorys/9">厂商动态</a>
 					</div>
 				</li>
 			</ul>
