--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -37,7 +37,7 @@
 						<div class="spe-pic">
 							<img th:src="@{/img/topic1.jpg}" width="210" height="175"/>
 						</div>
-						<div class="topic-detail" draggable="false" th:text="${subject.content.content}">
+						<div class="topic-detail dd" draggable="false" th:text="${subject.summary}">
 						</div>
 					</a>
 				</li>
