--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1827,3 +1827,10 @@ input[type=radio]:checked + label{
 	  border-radius:0;
     }
   }
+.dd{
+	width:350px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	course:hand;
+}
