--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -108,18 +108,6 @@
 				<input type="text" />
 			</div>
 			<div class="form-group">
-				<label><i>*</i>省/市</label>
-				<select th:field="*{province}">
-					<option value="">选择省份/市</option>
-					<option th:each="province:${provinces}" th:text="${province.name}" th:value="${province.id}"></option>
-				</select>
-				<select th:field="*{city}">
-					<option value="">选择城市</option>
-					<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
-				</select>
-				<i class="error">必填</i>
-			</div>
-			<div class="form-group">
 				<label><i>*</i>企业电话</label>
 				<input type="text" th:field="*{companyPhone}"/>
 				<i class="error" th:if="${#fields.hasErrors('companyPhone')}" th:errors="*{companyPhone}">必填</i>
@@ -138,17 +126,17 @@
 					<option value="">选择城市</option>
 					<option th:if="${citys!=null}" th:each="city:${citys}" th:text="${city.name}" th:value="${city.id}"></option>
 				</select>
-				<i class="error" th:if="${#fields.hasErrors('city')}" th:errors="*{city}">必填</i>
+				<i class="error" th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>详细地址</label>
 				<input type="text" th:field="*{address}"/>
-				<i class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">必填</i>
+				<i class="error" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>邮政编码</label>
 				<input type="text" th:field="*{code}"/>
-				<i class="error" th:if="${#fields.hasErrors('code')}" th:errors="*{code}">必填</i>
+				<i class="error" th:if="${#fields.hasErrors('code')}" th:errors="*{code}"></i>
 			</div>
 			<div class="hd resg-hd">
 				<span>行业信息</span>
